--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Fetch y peticiones</title>
         <script async defer src='./fetch.js'></script>
-        <script async defer src="./exercise.js"></script>
         <link rel='stylesheet' href='./styles.css'>
     </head>
     <body>
@@ -15,6 +14,9 @@
         <div class='container'>
             <div class='card--container'>
             </div>
+
+        <div id='pokemon-container' class='container'>
+        </div> 
 
             <div class="container row">
                 <label for="poke-name">Pokemon (Name / ID)</label>
